# rt-ticker-demo

./: CMakeLists.txt
apps/ticker/: CMakeLists.txt  main.cpp
cmake/: PreemptRT.cmake  VSOrganization.cmake  Xenomai.cmake
libs/ticker/: CMakeLists.txt  cxx14_smoke.h  ticker.cpp  ticker.h
